@@ -507,7 +507,7 @@ Xboxdrv::run_main(const Options& opts)
   {
     std::cout
       << "xboxdrv " PACKAGE_VERSION " - http://pingus.seul.org/~grumbel/xboxdrv/\n"
-      << "Copyright © 2008-2010 Ingo Ruhnke <grumbel@gmx.de>\n"
+      << "Copyright © 2008-2011 Ingo Ruhnke <grumbel@gmx.de>\n"
       << "Licensed under GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>\n"
       << "This program comes with ABSOLUTELY NO WARRANTY.\n"
       << "This is free software, and you are welcome to redistribute it under certain conditions; see the file COPYING for details.\n";
